JS code cleanup, added helpers.

--- a/DateFirst.Web/Templates/home.html
+++ b/DateFirst.Web/Templates/home.html
@@ -60,7 +60,6 @@
             <a id="btn-search" class="btn btn-user-profile" title="Search">
                 <span class="glyphicon glyphicon-search"></span>
             </a>
-            <!--<button id="btn-search" class="btn btn-user-profile">Search</button>-->
         </div>
     </div>
 </div>
@@ -127,26 +126,9 @@
         <div class="portlet portlet-default">
             <div class="portlet-heading">
                 <div class="portlet-title">
-                    <h3><!--<i class="fa fa-circle text-green"></i>-->  DateFirst Chat </h3>
+                    <h3>  DateFirst Chat </h3>
                 </div>
                 <div class="portlet-widgets">
-                    <!--<div class="btn-group">
-                        <button type="button" class="btn btn-white dropdown-toggle btn-xs" data-toggle="dropdown">
-                            <i class="fa fa-circle text-green"></i> Status
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>
-                                <a href="#"><i class="fa fa-circle text-green"></i> Online</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-circle text-orange"></i> Away</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-circle text-red"></i> Offline</a>
-                            </li>
-                        </ul>
-                    </div>-->
                     <span class="divider"></span>
                     <a data-toggle="collapse" data-parent="#accordion" href="#chat"><i class="fa fa-chevron-down"></i></a>
                 </div>
