--- a/DateFirst.Web/Templates/editProfile.html
+++ b/DateFirst.Web/Templates/editProfile.html
@@ -109,9 +109,12 @@
                             <option value="10">Aquarius</option>
                             <option value="11">Pisces</option>
                         </select>
+                      
                     </div>
+                    <button class="btn btn-info" id="btn-save-changes" type="button" title="Save Changes" value="Save">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Save
+                    </button>
                 </div>
-                <a href="#" class="btn btn-user-profile" id="btn-save-changes" title="Save Changes"><span class="glyphicon glyphicon-floppy-save"></span></a>
                 <div class="clearfix"></div>
             </div>
             <div class="tab-pane fade in" id="image-gallery">
