--- a/DateFirst.Web/Templates/userProfile.html
+++ b/DateFirst.Web/Templates/userProfile.html
@@ -38,20 +38,22 @@
     <div class="well">
         <div class="tab-content">
             <div class="tab-pane fade in active" id="user-info">
-                <div id="info-1">
+                <div class="col-md-4">
                     <div>Gender: {{this.AdditionalInfo.Gender}}</div>
                     <div>Age: {{this.AdditionalInfo.Age}}</div>
                     <div>Heigth: {{this.AdditionalInfo.Heigth}}</div>
                     <div>Weight: {{this.AdditionalInfo.Weight}}</div>
-                    <div>Hair Color: {{this.AdditionalInfo.HairColor}}</div>
-                    <div>Eye Color: {{this.AdditionalInfo.EyeColor}}</div>
-                    <div>Star Sign: {{this.AdditionalInfo.StarSign}}</div>
                 </div>
-                <div id="info-2">
+                <div class="col-md-4">
                     <div>Job Title: {{this.AdditionalInfo.JobTitle}}</div>
                     <div>Salary: {{this.AdditionalInfo.Salary}}$</div>
                     <div id="about-me-header">About me: </div>
                     <div id="ta-about-me">{{this.AdditionalInfo.AboutMe}}</div>
+                </div>
+                <div class="col-md-4">
+                    <div>Hair Color: {{this.AdditionalInfo.HairColor}}</div>
+                    <div>Eye Color: {{this.AdditionalInfo.EyeColor}}</div>
+                    <div>Star Sign: {{this.AdditionalInfo.StarSign}}</div>
                 </div>
             </div>
             <div class="tab-pane fade in" id="image-gallery">
