--- a/DateFirst.Web/Content/CustomCss/style.css
+++ b/DateFirst.Web/Content/CustomCss/style.css
@@ -46,12 +46,12 @@ a:hover {
         background-image: url('../../Images/cloud button hover.png');
     }
 
-#register-btn, #login-btn {
+#register-btn, #login-btn, #signout-cloud-btn {
     border: none;
     outline: none;
 }
 
-    #register-btn:hover, #login-btn:hover {
+    #register-btn:hover, #login-btn:hover, #signout-cloud-btn::after hover {
         background-image: url('../../Images/login-register-hover.png');
     }
 
@@ -69,6 +69,12 @@ a:hover {
     color: #fff;
     font-size: 13px;
 }
+
+#edit-profile{
+   margin-bottom:10px;
+   margin-left:-223px;
+}
+
 
 #search-container {
     float: left;
@@ -476,12 +482,12 @@ a:hover {
     margin-top: 0px !important;
 }
 
-a#user-image {
+#user-image {
     padding: 10px;
     margin: 0px;
 }
 
-    a#user-image img {
+    #user-image img {
         border-radius: 5px;
         width: 25px;
         height: 25px;
