--- a/DateFirst.Web/Templates/userProfile.html
+++ b/DateFirst.Web/Templates/userProfile.html
@@ -1,19 +1,25 @@
 ﻿<div>
-    <div class="card hovercard">
-        <div class="card-background">
-            <button type="button" id="flirts" class="btn btn-info btn-lg col-md-2" data-type="like">
-                <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Flirt
-                <strong id="count">{{this.Flirts}}</strong>
-            </button>
-        </div>
-        <div class="useravatar">
-            <img alt="" src={{this.AvatarUrl}}>
-        </div>
-
-        <div class="card-info">
-            <span class="card-title">{{this.FirstName}} {{this.LastName}}</span>
+    <div class="card-group">
+        <div class="card hovercard">
+            <div class="card-background">
+                <button type="button" id="flirts" class="btn btn-info btn-lg col-md-2" data-type="like">
+                    <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Flirt
+                    <strong id="count">{{this.Flirts}}</strong>
+                </button>
+            </div>
+            <a href="#/users/{{this.Id}}/edit-profile" id="edit-profile" class="btn btn-warning btn-sm ">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                <strong id="count">Edit Profile</strong>
+            </a>
+            <div class="useravatar">
+                <img alt="" src={{this.AvatarUrl}}>
+            </div>
+            <div class="card-info">
+                <span class="card-title">{{this.FirstName}} {{this.LastName}}</span>
+            </div>
         </div>
     </div>
+ 
     <div class="btn-pref btn-group btn-group-justified btn-group-lg" id="btn-container" role="group" aria-label="...">
         <div class="btn-group" role="group">
             <button type="button" id="btn-bio" class="btn btn-user-profile" href="#user-info" data-toggle="tab">
